--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cra-template": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-reader": "^1.1.4",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.1"
   },
